--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
+        /* --- UPDATED RAINBOW QUIZ BOX --- */
         .container {
             background: linear-gradient(-45deg, #ffffff, #fff0f3, #f0f7ff, #ffffff);
             background-size: 300% 300%;
@@ -46,7 +47,13 @@
             position: relative;
             z-index: 10;
             backdrop-filter: blur(15px);
-            border: 4px solid white;
+            /* This creates the Rainbow Border effect */
+            border: 5px solid transparent;
+            border-image: linear-gradient(45deg, #ffafcc, #bde0fe, #ffc8dd, #b9fbc0, #fcf6bd) 1;
+            border-radius: 30px; /* Note: border-image can sometimes break border-radius in some browsers, using box-shadow as fallback */
+            box-shadow: 0 0 20px rgba(255, 175, 204, 0.5), 0 20px 50px rgba(0,0,0,0.1);
+            background-clip: padding-box;
+            border: 4px solid white; /* Keeping the clean white edge but adding a rainbow glow below */
             box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.6), 
                         0 0 20px 2px #ffafcc, 
                         0 0 25px 5px #bde0fe;
@@ -77,6 +84,7 @@
             background: rgba(255, 255, 255, 0.9); border-radius: 20px;
             cursor: pointer; transition: 0.3s; color: var(--text-color);
             font-family: 'Quicksand', sans-serif; font-weight: 700;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
         }
         button:hover { 
             background: linear-gradient(45deg, #ffafcc, #bde0fe); 
@@ -129,49 +137,11 @@
         @keyframes slowShow { to { opacity: 1; } }
 
         .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
-
-        /* --- NEW STYLES: VINYL RECORD --- */
-        .vinyl-container {
-            width: 120px; height: 120px; margin: 20px auto;
-            position: relative; border-radius: 50%;
-            background: #111; border: 5px solid #333;
-            display: flex; justify-content: center; align-items: center;
-            animation: spin 3s linear infinite;
-        }
-        .vinyl-center {
-            width: 40px; height: 40px; background: #ff4d6d;
-            border-radius: 50%; border: 3px solid #000;
-        }
-        @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-
-        /* --- NEW STYLES: REASONS TOAST --- */
-        #reason-toast {
-            margin-top: 15px; font-weight: 600; color: #ff4d6d;
-            font-style: italic; min-height: 24px; transition: 0.3s;
-        }
-
-        /* --- NEW STYLES: HEART HUG ANIMATION --- */
-        #hug-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(255, 255, 255, 0.9); z-index: 1000;
-            display: none; justify-content: center; align-items: center;
-        }
-        .hug-heart { font-size: 80px; position: absolute; animation: heartHug 2s forwards; }
-        @keyframes heartHug {
-            0% { transform: scale(1) translateX(-100px); opacity: 0; }
-            50% { transform: scale(1.3) translateX(0); opacity: 1; }
-            100% { transform: scale(1) translateX(0); opacity: 0; }
-        }
     </style>
 </head>
 <body>
 
 <canvas id="lineCanvas"></canvas>
-
-<div id="hug-overlay">
-    <div class="hug-heart" style="left: calc(50% - 60px);">❤️</div>
-    <div class="hug-heart" style="left: calc(50% + 10px);">💖</div>
-</div>
 
 <div class="container">
     <audio id="bgMusic" loop><source src="music.mp3.mp3" type="audio/mpeg"></audio>
@@ -214,15 +184,10 @@
                 <div class="gift-item" onclick="openView('music-view', true)">🎵</div>
                 <div class="gift-item" onclick="openView('password-view')">🎁</div>
             </div>
-            <button onclick="showNextReason()" style="padding: 10px 20px; font-size: 0.8rem; background: #fff; margin-top: 10px;">A Message for You 💖</button>
-            <div id="reason-toast"></div>
         </div>
 
         <div id="music-view" class="music-view">
-            <div class="vinyl-container">
-                <div class="vinyl-center"></div>
-            </div>
-            <div style="text-align: center;">
+            <div style="text-align: center; margin-top: 20px;">
                 <p class="music-text">
                     Every note of this song reminds me of you. <br>
                     You are the melody in my heart, Archana. <br>
@@ -254,17 +219,6 @@
     const ctx = canvas.getContext('2d');
     let currentStep = 1; let score = 0; let time = 0;
     const music = document.getElementById('bgMusic');
-
-    // REASONS ARRAY
-    const reasons = [
-        "Because your smile makes my day ✨",
-        "Because you are my best friend 🫶",
-        "Because you make me feel special 🌸",
-        "Because you are my home 🏠",
-        "Because I love how annoying you are 😂",
-        "Because you are the most beautiful soul ❤️"
-    ];
-    let reasonIndex = 0;
 
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
     window.addEventListener('resize', resize); resize();
@@ -348,15 +302,9 @@
         }
     }
 
-    // UPDATED showGift with Heart Hug Animation
     function showGift() {
-        const hugOverlay = document.getElementById('hug-overlay');
-        hugOverlay.style.display = 'flex';
-        setTimeout(() => {
-            hugOverlay.style.display = 'none';
-            document.getElementById('result-page').classList.remove('active');
-            document.getElementById('gift-page').classList.add('active');
-        }, 2000);
+        document.getElementById('result-page').classList.remove('active');
+        document.getElementById('gift-page').classList.add('active');
     }
 
     function openView(viewId, isMusic = false) {
@@ -372,13 +320,6 @@
         document.getElementById('password-view').style.display = 'none';
         document.getElementById('music-view').style.display = 'none';
         document.getElementById('gift-selection').style.display = 'block';
-    }
-
-    // NEW FUNCTION: Reasons Why
-    function showNextReason() {
-        const toast = document.getElementById('reason-toast');
-        toast.innerText = reasons[reasonIndex];
-        reasonIndex = (reasonIndex + 1) % reasons.length;
     }
 </script>
 </body>
