--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
             display: flex; justify-content: center; align-items: center;
         }
 
+        /* --- NEW STICKER STYLES --- */
+        .sticker {
+            position: fixed;
+            font-size: 2.5rem;
+            z-index: 5;
+            user-select: none;
+            pointer-events: none; /* So they don't block buttons */
+            animation: floatingSticker 4s ease-in-out infinite;
+        }
+
+        @keyframes floatingSticker {
+            0%, 100% { transform: translateY(0) rotate(5deg); }
+            50% { transform: translateY(-15px) rotate(-5deg); }
+        }
+
+        /* Position stickers in corners */
+        .s1 { top: 5%; left: 5%; animation-delay: 0s; }
+        .s2 { top: 5%; right: 5%; animation-delay: 1s; }
+        .s3 { bottom: 5%; left: 5%; animation-delay: 2s; }
+        .s4 { bottom: 5%; right: 5%; animation-delay: 1.5s; }
+        /* -------------------------- */
+
         @keyframes rainbowBG {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
@@ -34,7 +56,6 @@
 
         #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
-        /* --- UPDATED RAINBOW QUIZ BOX --- */
         .container {
             background: linear-gradient(-45deg, #ffffff, #fff0f3, #f0f7ff, #ffffff);
             background-size: 300% 300%;
@@ -47,13 +68,7 @@
             position: relative;
             z-index: 10;
             backdrop-filter: blur(15px);
-            /* This creates the Rainbow Border effect */
-            border: 5px solid transparent;
-            border-image: linear-gradient(45deg, #ffafcc, #bde0fe, #ffc8dd, #b9fbc0, #fcf6bd) 1;
-            border-radius: 30px; /* Note: border-image can sometimes break border-radius in some browsers, using box-shadow as fallback */
-            box-shadow: 0 0 20px rgba(255, 175, 204, 0.5), 0 20px 50px rgba(0,0,0,0.1);
-            background-clip: padding-box;
-            border: 4px solid white; /* Keeping the clean white edge but adding a rainbow glow below */
+            border: 4px solid white; 
             box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.6), 
                         0 0 20px 2px #ffafcc, 
                         0 0 25px 5px #bde0fe;
@@ -140,6 +155,11 @@
     </style>
 </head>
 <body>
+
+<div class="sticker s1">🎀</div>
+<div class="sticker s2">✨</div>
+<div class="sticker s3">🧸</div>
+<div class="sticker s4">💖</div>
 
 <canvas id="lineCanvas"></canvas>
 
