--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         @keyframes floatText { 0%, 100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-10px) scale(1.05); } }
         
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
-        .gift-item { font-size: 60px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; }
+        .gift-item { font-size: 60px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; filter: drop-shadow(0 0 5px rgba(255,175,204,0.4)); }
+        .gift-item:hover { transform: scale(1.2); filter: drop-shadow(0 0 15px #ff4d6d); }
         @keyframes wobble { 0%, 100% { transform: rotate(0deg); } 25% { transform: rotate(5deg); } 75% { transform: rotate(-5deg); } }
 
         .letter-view, .password-view, .music-view { display: none; text-align: left; }
@@ -133,15 +134,23 @@
         .back-icon:hover { background: #ffafcc; transform: translateY(-2px); }
         .center-btn { text-align: center; width: 100%; }
 
-        .reveal-pass { opacity: 0; animation: slowShow 2s forwards; }
+        .reveal-pass { opacity: 0; animation: slowShow 2s forwards; cursor: pointer; position: relative; }
         @keyframes slowShow { to { opacity: 1; } }
 
         .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
+        
+        /* New Click Feedback Styles */
+        #copy-toast {
+            position: fixed; bottom: 20%; left: 50%; transform: translateX(-50%);
+            background: rgba(94, 84, 142, 0.9); color: white; padding: 10px 20px;
+            border-radius: 20px; font-size: 0.8rem; opacity: 0; transition: 0.3s; z-index: 1000;
+        }
     </style>
 </head>
 <body>
 
 <canvas id="lineCanvas"></canvas>
+<div id="copy-toast">Copied to your heart! ❤️</div>
 
 <div class="container">
     <audio id="bgMusic" loop><source src="music.mp3.mp3" type="audio/mpeg"></audio>
@@ -205,9 +214,10 @@
         <div id="password-view" class="password-view">
             <div style="text-align: center; margin-top: 20px;">
                 <p>The secret gift password is:</p>
-                <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc; margin-bottom: 25px;">
+                <h2 class="reveal-pass" onclick="copyPassword()" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc; margin-bottom: 25px;">
                     Archanamadhu@7736
                 </h2>
+                <p style="font-size: 0.8rem; color: #999;">(Tap the code to copy it!)</p>
                 <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
             </div>
         </div>
@@ -320,6 +330,17 @@
         document.getElementById('password-view').style.display = 'none';
         document.getElementById('music-view').style.display = 'none';
         document.getElementById('gift-selection').style.display = 'block';
+    }
+
+    // New Function to copy password
+    function copyPassword() {
+        const pass = "Archanamadhu@7736";
+        navigator.clipboard.writeText(pass).then(() => {
+            const toast = document.getElementById('copy-toast');
+            toast.style.opacity = '1';
+            setTimeout(() => { toast.style.opacity = '0'; }, 2000);
+            createFireworks(20);
+        });
     }
 </script>
 </body>
