--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
         #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
-        /* --- UPDATED RAINBOW QUIZ BOX --- */
         .container {
             background: linear-gradient(-45deg, #ffffff, #fff0f3, #f0f7ff, #ffffff);
             background-size: 300% 300%;
@@ -85,10 +84,10 @@
             color: white; border-color: white; transform: scale(1.03); 
         }
 
-        /* Float behavior for the No button */
+        /* Essential for the teleporting button */
         #noButton {
-            transition: all 0.2s ease;
-            z-index: 1000;
+            transition: all 0.15s ease-out;
+            z-index: 9999;
         }
 
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
@@ -173,7 +172,7 @@
         <p>Will you be my Valentine? </p>
         <div class="options-grid">
             <button onclick="checkScore(this, true)">YES!</button>
-            <button id="noButton" onclick="floatNoButton()">No way</button>
+            <button id="noButton" onclick="moveNoButton()">No way</button>
         </div>
     </div>
 
@@ -282,16 +281,16 @@
         }, 600);
     }
 
-    // New logic: Floating "No" button
-    function floatNoButton() {
-        const btn = document.getElementById('noButton');
-        // Calculate random position within screen bounds
-        const x = Math.random() * (window.innerWidth - btn.offsetWidth - 20);
-        const y = Math.random() * (window.innerHeight - btn.offsetHeight - 20);
+    // Logic to move the button every single time it is clicked
+    function moveNoButton() {
+        const noBtn = document.getElementById('noButton');
+        const padding = 50; 
+        const x = Math.random() * (window.innerWidth - noBtn.offsetWidth - padding * 2) + padding;
+        const y = Math.random() * (window.innerHeight - noBtn.offsetHeight - padding * 2) + padding;
         
-        btn.style.position = 'fixed';
-        btn.style.left = x + 'px';
-        btn.style.top = y + 'px';
+        noBtn.style.position = 'fixed';
+        noBtn.style.left = x + 'px';
+        noBtn.style.top = y + 'px';
     }
 
     function checkScore(btn, isCorrect) {
@@ -308,7 +307,7 @@
                 text.innerText = `Perfect Score! 11/11! ✨`;
                 giftBtn.style.display = 'block'; giftBtn.innerText = "Claim Your Gifts"; giftBtn.onclick = showGift;
             } else {
-                text.innerText = `You got ${score}/11. You need 11/11 to unlock the gifts! 🌸`;
+                text.innerText = `You got ${score}/11. You need 11/11 correct to unlock your surprise! 🌸`;
                 giftBtn.style.display = 'block'; giftBtn.innerText = "Try Again 🔄"; giftBtn.onclick = () => location.reload();
             }
         }, 600);
