--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
             color: white; border-color: white; transform: scale(1.03); 
         }
 
+        /* Question 11 No Button - Fixed Speed & Size */
         #noButton {
             position: absolute;
             width: 100%;
             height: 52px;
             left: 0;
             bottom: 0;
-            transition: 0.05s linear; /* ULTRA FAST */
+            transition: 0.02s linear; /* Teleport speed */
             z-index: 100;
         }
 
@@ -96,8 +97,9 @@
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
         .particle { position: absolute; border-radius: 50%; pointer-events: none; z-index: 999; }
+        .cracker { position: absolute; width: 4px; height: 15px; border-radius: 2px; pointer-events: none; z-index: 999; }
 
-        /* SURPRISE PAGES STYLES - RESTORED */
+        /* SURPRISE PAGES STYLES */
         .valentine-title { font-family: 'Dancing Script', cursive; font-size: 3rem; font-weight: 700; color: #ff4d6d; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); animation: floatText 3s ease-in-out infinite; }
         @keyframes floatText { 0%, 100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-10px) scale(1.05); } }
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
@@ -190,7 +192,7 @@
     const canvas = document.getElementById('lineCanvas');
     const ctx = canvas.getContext('2d');
     let currentStep = 1; let score = 0; let time = 0;
-    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff'];
+    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec'];
     const music = document.getElementById('bgMusic');
 
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
@@ -243,10 +245,16 @@
     }
 
     function finalYes(btn) {
-        score++; btn.style.backgroundColor = "#b9fbc0";
-        const fireworkInterval = setInterval(() => createMegaSpark(35), 100);
+        score++;
+        btn.style.backgroundColor = "#b9fbc0";
+        // FIREWORKS + CRACKERS
+        const effectInterval = setInterval(() => {
+            createMegaSpark(25);
+            createCrackers(15);
+        }, 120);
+
         setTimeout(() => {
-            clearInterval(fireworkInterval);
+            clearInterval(effectInterval);
             document.getElementById(`q11`).classList.remove('active');
             document.getElementById('result-page').classList.add('active');
             showResult();
@@ -276,6 +284,26 @@
         }
     }
 
+    // NEW: Cracker style fireworks
+    function createCrackers(count) {
+        for (let i = 0; i < count; i++) {
+            const c = document.createElement('div');
+            c.className = 'cracker';
+            c.style.backgroundColor = ['#fff', '#ffea00', '#ff0054'][Math.floor(Math.random()*3)];
+            c.style.left = Math.random() * 100 + '%';
+            c.style.top = Math.random() * 100 + '%';
+            document.body.appendChild(c);
+            const angle = Math.random() * Math.PI * 2;
+            const dist = Math.random() * 800 + 200;
+            const dX = Math.cos(angle) * dist;
+            const dY = Math.sin(angle) * dist;
+            c.animate([
+                { transform: `rotate(${angle}rad) translate(0,0) scaleY(1)`, opacity: 1 },
+                { transform: `rotate(${angle}rad) translate(${dX}px, ${dY}px) scaleY(0.1)`, opacity: 0 }
+            ], { duration: 800, easing: 'cubic-bezier(0,1,1,1)' }).onfinish = () => c.remove();
+        }
+    }
+
     function showResult() {
         const text = document.getElementById('result-text');
         const giftBtn = document.getElementById('gift-btn');
@@ -286,7 +314,7 @@
                 document.getElementById('gift-page').classList.add('active');
             };
         } else {
-            text.innerText = `You missed some answers! Try again!`;
+            text.innerText = `Try again, Babbyyy! 11/11 needed!`;
             giftBtn.style.display = 'block'; giftBtn.innerText = "Restart 🔄"; giftBtn.onclick = () => location.reload();
         }
     }
