--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             to { transform: translateX(0); opacity: 1; }
         }
 
-        .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; position: relative; min-height: 250px; }
+        .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; position: relative; min-height: 280px; }
 
         button {
             width: 100%; padding: 14px; border: 2px solid #ffccd5;
@@ -82,22 +82,25 @@
             color: white; border-color: white; transform: scale(1.03); 
         }
 
-        /* Question 11 No Button - Fixed Speed & Size */
+        /* Question 11 No Button - NO COLOR CHANGES ON CLICK */
         #noButton {
             position: absolute;
             width: 100%;
             height: 52px;
             left: 0;
             bottom: 0;
-            transition: 0.02s linear; /* Teleport speed */
+            transition: 0.05s linear; 
             z-index: 100;
+            background: rgba(255, 255, 255, 0.9) !important; /* Forces color to stay white */
+            color: var(--text-color) !important;
+            border: 2px solid #ffccd5 !important;
         }
 
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
         .particle { position: absolute; border-radius: 50%; pointer-events: none; z-index: 999; }
-        .cracker { position: absolute; width: 4px; height: 15px; border-radius: 2px; pointer-events: none; z-index: 999; }
+        .cracker { position: absolute; width: 4px; height: 18px; border-radius: 2px; pointer-events: none; z-index: 999; }
 
         /* SURPRISE PAGES STYLES */
         .valentine-title { font-family: 'Dancing Script', cursive; font-size: 3rem; font-weight: 700; color: #ff4d6d; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); animation: floatText 3s ease-in-out infinite; }
@@ -235,23 +238,34 @@
         }, 600);
     }
 
+    // UPDATED: Faster movement and forces corner/distance jumps
     function moveNoButton() {
         const btn = document.getElementById('noButton');
         const grid = document.getElementById('q11-grid');
         const maxX = grid.clientWidth - btn.offsetWidth;
         const maxY = grid.clientHeight - btn.offsetHeight;
-        btn.style.left = Math.random() * maxX + "px";
-        btn.style.top = Math.random() * maxY + "px";
+        
+        let newX, newY;
+        const currentX = parseFloat(btn.style.left) || 0;
+        const currentY = parseFloat(btn.style.top) || 0;
+
+        // Force a jump that is far from current position (Left/Right/Corners)
+        do {
+            newX = Math.random() * maxX;
+            newY = Math.random() * maxY;
+        } while (Math.abs(newX - currentX) < 100 && Math.abs(newY - currentY) < 100);
+
+        btn.style.left = newX + "px";
+        btn.style.top = newY + "px";
     }
 
     function finalYes(btn) {
         score++;
         btn.style.backgroundColor = "#b9fbc0";
-        // FIREWORKS + CRACKERS
         const effectInterval = setInterval(() => {
-            createMegaSpark(25);
-            createCrackers(15);
-        }, 120);
+            createMegaSpark(30);
+            createCrackers(20);
+        }, 100);
 
         setTimeout(() => {
             clearInterval(effectInterval);
@@ -276,31 +290,30 @@
         for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
             p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random() * 4)];
-            p.style.width = (Math.random() * 12 + 4) + 'px'; p.style.height = p.style.width;
+            p.style.width = (Math.random() * 14 + 5) + 'px'; p.style.height = p.style.width;
             p.style.left = Math.random() * 100 + '%'; p.style.top = Math.random() * 100 + '%';
             document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 1400, dY = (Math.random() - 0.5) * 1400;
+            const dX = (Math.random() - 0.5) * 1500, dY = (Math.random() - 0.5) * 1500;
             p.animate([{ opacity: 1, transform: 'scale(1.5)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 2000).onfinish = () => p.remove();
         }
     }
 
-    // NEW: Cracker style fireworks
     function createCrackers(count) {
         for (let i = 0; i < count; i++) {
             const c = document.createElement('div');
             c.className = 'cracker';
-            c.style.backgroundColor = ['#fff', '#ffea00', '#ff0054'][Math.floor(Math.random()*3)];
+            c.style.backgroundColor = ['#fff', '#ffea00', '#ff0054', '#00f2ff'][Math.floor(Math.random()*4)];
             c.style.left = Math.random() * 100 + '%';
             c.style.top = Math.random() * 100 + '%';
             document.body.appendChild(c);
             const angle = Math.random() * Math.PI * 2;
-            const dist = Math.random() * 800 + 200;
+            const dist = Math.random() * 1000 + 300;
             const dX = Math.cos(angle) * dist;
             const dY = Math.sin(angle) * dist;
             c.animate([
-                { transform: `rotate(${angle}rad) translate(0,0) scaleY(1)`, opacity: 1 },
-                { transform: `rotate(${angle}rad) translate(${dX}px, ${dY}px) scaleY(0.1)`, opacity: 0 }
-            ], { duration: 800, easing: 'cubic-bezier(0,1,1,1)' }).onfinish = () => c.remove();
+                { transform: `rotate(${angle}rad) translate(0,0) scaleY(1.5)`, opacity: 1 },
+                { transform: `rotate(${angle}rad) translate(${dX}px, ${dY}px) scaleY(0)`, opacity: 0 }
+            ], { duration: 900, easing: 'ease-out' }).onfinish = () => c.remove();
         }
     }
 
@@ -314,7 +327,7 @@
                 document.getElementById('gift-page').classList.add('active');
             };
         } else {
-            text.innerText = `Try again, Babbyyy! 11/11 needed!`;
+            text.innerText = `Babbyy, you need 11/11 to see the surprise! Try again!`;
             giftBtn.style.display = 'block'; giftBtn.innerText = "Restart 🔄"; giftBtn.onclick = () => location.reload();
         }
     }
